fix horizontal scroll bug

--- a/src/about/about.css
+++ b/src/about/about.css
@@ -11,8 +11,8 @@
 
 .about__container {
   display: grid;
-  grid-template-columns: 35% 50%;
-  gap: 15%;
+  grid-template-columns: 1fr 2fr;
+  gap: 5rem;
 }
 
 .about__me {
@@ -55,7 +55,7 @@
 .about__cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 .about__card h5 {
@@ -115,14 +115,22 @@
 
 /* =========== MEDIA QUERIES (SMALL DEVICES) ============== */
 @media screen and (max-width: 600px) {
+  .about__container {
+    grid-template-columns: 1fr;
+  }
+
   .about__me {
-    width: 65%;
-    margin: 0 auto 3rem;
+    width: 100%;
+    margin: 1.5rem auto 3rem;
   }
 
   .about__cards {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 1rem;
+  }
+
+  .about__card {
+    padding: 1rem;
   }
 
   .about__content {
