--- a/src/app/app.css
+++ b/src/app/app.css
@@ -129,7 +129,7 @@ img {
 /* ================= MEDIA QUERIES (MEDIUM DEVICES) =================*/
 @media screen and (max-width: 1024px) {
   .container {
-    width: var(--container-width-md);
+    max-width: var(--container-width-md);
   }
 
   section {
@@ -140,7 +140,7 @@ img {
 /* ================= MEDIA QUERIES (SMALL DEVICES) =================*/
 @media screen and (max-width: 600px) {
   .container {
-    width: var(--container-width-sm);
+    max-width: var(--container-width-sm);
   }
 
   section > h2 {
